<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       <RelativeLayout
            android:id="@+id/LayoutMenuEndarrereFitxa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/txtNomBoletFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/nombolet"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgFitxaBolet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LayoutMenuEndarrereFitxa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:src="@drawable/boletloading" />

        <RelativeLayout
            android:id="@+id/LayoutMenuInformacioFitxa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imgFitxaBolet" >

            <TextView
                android:id="@+id/txtClasseBolet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/classeBolet"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtClasseBolet"
                android:text="@string/nomcientific"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomCientificFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:text="@string/nomcientific"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/Layout1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtNomCientificFitxa" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Layout1"
                android:text="@string/altresnoms"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAltresFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:text="@string/altresnoms"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/Layout2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtAltresFitxa" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Layout2"
                android:text="@string/habitat"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHabitatFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:text="@string/habitat"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/Layout3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtHabitatFitxa" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Layout3"
                android:text="@string/gastronomia"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGastronomiaFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:text="@string/gastronomia"
                android:textSize="15dp" />
            
            <RelativeLayout
                android:id="@+id/Layout4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtGastronomiaFitxa" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Layout4"
                android:text="@string/confusio"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtConfusioFitxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:text="@string/confusio"
                android:textSize="15dp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>